<resources>
    <string name="app_name">Expanse Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="note">Note</string>
    <string name="optional_note">Optional Note</string>
    <string name="scheduling">Scheduling*</string>
    <string name="account">Payment Method*</string>
    <string name="type">Entry Type*</string>
    <string name="select_type">Select Entry Type</string>
    <string name="amount">Amount*</string>
    <string name="action_save">Save</string>
    <string name="category">Category*</string>
    <string name="select_category">Select Category</string>
    <string name="select_account">Select Payment Method</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="empty">Empty!</string>
    <string name="please_wait">Please Wait!</string>
</resources>
