<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_2sdp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFFFFF"
                app:cardElevation="1dp"
                android:layout_marginBottom="@dimen/_2sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/labelText"
                        android:text="@string/scheduling"
                        android:drawableLeft="@drawable/ic_schedule_primary_24dp"
                        android:drawablePadding="@dimen/_2sdp"
                        />

                    <View style="@style/horizontalView" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="@dimen/_12sdp"
                        android:layout_marginRight="@dimen/_12sdp">

                        <TextView
                            android:id="@+id/tvDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/darker_gray"
                            android:paddingTop="@dimen/_12sdp"
                            android:paddingBottom="@dimen/_12sdp"
                            android:text="Select Date" />

                        <TextView
                            android:id="@+id/tvTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/darker_gray"
                            android:paddingTop="@dimen/_12sdp"
                            android:paddingBottom="@dimen/_12sdp"
                            android:text="Select Time" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFFFFF"
                app:cardElevation="1dp"
                android:layout_marginBottom="@dimen/_2sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/labelText"
                        android:text="@string/type"
                        android:drawableLeft="@drawable/ic_compare_arrows_primary_24dp"
                        android:drawablePadding="@dimen/_2sdp" />

                    <View style="@style/horizontalView" />

                    <TextView
                        android:id="@+id/tvType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/darker_gray"
                        android:paddingTop="@dimen/_12sdp"
                        android:paddingBottom="@dimen/_12sdp"
                        android:text="@string/select_type"
                        android:layout_marginLeft="@dimen/_12sdp"
                        android:layout_marginRight="@dimen/_12sdp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFFFFF"
                app:cardElevation="1dp"
                android:layout_marginBottom="@dimen/_2sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/labelText"
                        android:text="@string/account"
                        android:drawableLeft="@drawable/ic_account_balance_wallet_primary_24dp"
                        android:drawablePadding="@dimen/_2sdp" />

                    <View style="@style/horizontalView" />

                    <TextView
                        android:id="@+id/tvAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/darker_gray"
                        android:paddingTop="@dimen/_12sdp"
                        android:paddingBottom="@dimen/_12sdp"
                        android:text="@string/select_account"
                        android:layout_marginLeft="@dimen/_12sdp"
                        android:layout_marginRight="@dimen/_12sdp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFFFFF"
                app:cardElevation="1dp"
                android:layout_marginBottom="@dimen/_2sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/labelText"
                        android:text="@string/category"
                        android:drawableLeft="@drawable/ic_apps_primary_24dp"
                        android:drawablePadding="@dimen/_2sdp" />

                    <View style="@style/horizontalView" />

                    <TextView
                        android:id="@+id/tvCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/darker_gray"
                        android:paddingTop="@dimen/_12sdp"
                        android:paddingBottom="@dimen/_12sdp"
                        android:text="@string/select_category"
                        android:drawablePadding="@dimen/_4sdp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_12sdp"
                        android:layout_marginRight="@dimen/_12sdp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFFFFF"
                app:cardElevation="1dp"
                android:layout_marginBottom="@dimen/_2sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/labelText"
                        android:text="@string/amount"
                        android:drawableLeft="@drawable/ic_rupee_indian"
                        android:drawablePadding="@dimen/_2sdp" />

                    <View style="@style/horizontalView" />

                    <EditText
                        android:id="@+id/etAmt"
                        style="@style/FullWidthEditText.multipleLine"
                        android:hint="Amount"
                        android:inputType="numberDecimal"
                        android:autofillHints="Amount"
                        android:imeOptions="actionNext" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="#FFFFFF"
                app:cardElevation="1dp"
                android:layout_marginBottom="@dimen/_2sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/labelText"
                        android:text="@string/note"
                        android:drawableLeft="@drawable/ic_event_note_primary_24dp"
                        android:drawablePadding="@dimen/_2sdp" />

                    <View style="@style/horizontalView" />

                    <EditText
                        android:id="@+id/etNote"
                        style="@style/FullWidthEditText.multipleLine"
                        android:hint="@string/optional_note"
                        android:inputType="text"
                        android:autofillHints="@string/optional_note"
                        android:imeOptions="actionDone"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>